--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,13 @@
     <dependency>
       <groupId>com.google.protobuf</groupId>
       <artifactId>protobuf-java</artifactId>
-      <version>2.4.1</version>
+      <version>2.5.0</version>
+    </dependency>
+    
+    <dependency>
+        <groupId>org.xerial.larray</groupId>
+        <artifactId>larray</artifactId>
+        <version>0.2.1</version>
     </dependency>
   </dependencies>
 </project>
